TestCases/LLVMTests/SyntaxErrorTests/tests/test22.c
int main() {

float x* = 5;

}
